2002-06-11  Richard M. Stallman  <rms@gnu.org>

	* format.el (format-alist): Document new element PRESERVE.
	(format-write-file): Implement PRESERVE elt for a format.

	* files.el (make-auto-save-file-name): Rename local `filename' to
	`file-name'.

2002-06-10  Richard M. Stallman  <rms@gnu.org>

	* progmodes/ebrowse.el (ebrowse-draw-tree-fn): Use copy-sequence.
	(ebrowse-copy-list): Function deleted.

	* eshell/em-unix.el (eshell/diff): Use copy-sequence.

	* eshell/esh-mode.el (eshell-mode, eshell-mode): Use copy-sequence.

	* eshell/esh-util.el (eshell-copy-list): Function deleted.
	(eshell-sublist): Use copy-sequence.
	(eshell-copy-tree): Make it an alias for copy-tree.

	* emacs-lisp/cl.el (copy-list): Moved back from subr.el.

	* subr.el (copy-list): Moved to cl.el.
	(copy-tree): Don't use copy-list or cl-pop.

2002-06-10  Miles Bader  <miles@gnu.org>

	Make comint use text properties for highlighting instead of overlays:
	* comint.el (comint-last-output-overlay): Variable removed.
	(comint-send-input, comint-output-filter): Use text properties
	instead of overlays.
	(comint-insert-clicked-input): Rewrite to work with text
	properties as well as overlays
	(comint-snapshot-last-prompt): Snapshot using text properties.
	(comint-get-old-input-default, comint-extract-string): Don't copy
	text properties. 

	* simple.el (line-move-finish): Inhibit field motion when
	computing `line-end'.

	* files.el (revert-buffer): Correct typo: variable name is
	`buffer-file-format', not `buffer-file-formats'.

	* comint.el (comint-send-input, comint-output-filter): Use the
	`font-lock-face' property instead of `face'.  Don't check the
	highlight-enabling variables anymore.
	(comint-highlight-input, comint-highlight-prompt): Variables
	removed.
	
	* faces.el (display-supports-face-attributes-p): New function.
	(face-spec-set-match-display): Support `supports' predicate.
	(italic): Try underlining for displays that don't support real italics.